--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/2DStress.exe",
+            "program": "${workspaceFolder}/2DTruss.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
