--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,5 +39,7 @@
         "forward_list": "cpp",
         "unordered_set": "cpp",
         "valarray": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Enabled",
+    "C_Cpp.intelliSenseEngine": "Tag Parser"
 }
